# rust-ndk-binding

./: FUNDING.yml  README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myktapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myktapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/myktapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust-lib/: Cargo.toml
rust-lib/src/: lib.rs
